ArduSim. Safe takeoff strategy updated with new algorithms